--- a/.travis.yml
+++ b/.travis.yml
@@ -15,14 +15,6 @@ cache:
   directories:
     - $HOME/$ARDUINO_SDK_BASE_PATH-$ARDUINO_SDK_VERSION
 
-addons:
-  apt:
-    packages:
-      - binutils-avr
-      - avr-libc
-      - avrdude
-      - cmake
-
 before_install:
   - sdk_path="$HOME/$ARDUINO_SDK_BASE_PATH-$ARDUINO_SDK_VERSION"
   - mkdir -p "$sdk_path"
@@ -59,7 +51,7 @@ install:
   - cd build/
 
 script:
-  - cmake -D CMAKE_TOOLCHAIN_FILE="../cmake/Arduino-Toolchain.cmake" ../examples
+  - cmake ..
   - make
 
 after_failure:
