Fix : Build Arduino cmake ng

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@
 cmake_minimum_required(VERSION 3.8.2)
 
 # Définition de la tool chain de build
-set(CMAKE_TOOLCHAIN_FILE ../arduino-cmake-ng/cmake/Arduino-Toolchain.cmake)
+set(CMAKE_TOOLCHAIN_FILE ./cmake/Arduino-Toolchain.cmake)
 
 # Compilateur flags
 #set(ARDUINO_C_FLAGS      "-ffunction-sections -fdata-sections")
@@ -17,12 +17,16 @@ set(CMAKE_TOOLCHAIN_FILE ../arduino-cmake-ng/cmake/Arduino-Toolchain.cmake)
 
 set(ARDUINO_CXX_FLAGS    "-std=c++11")
 
-#add_definitions(-DDEBUG_MODE)
+if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
+    message(STATUS "Debug mode ON")
+    add_definitions(-DDEBUG_MODE)
+endif()
 
 #====================================================================#
 #  Setup Project                                                     #
 #====================================================================#
 project(RobotSystemLib C CXX ASM)
+arduino_cmake_project(RobotSystemLib BOARD_NAME megaADK BOARD_CPU atmega2560)
 
 # Récupération des sources
 file(GLOB_RECURSE SOURCES "src/*.cpp" "src/*.c")
@@ -32,14 +36,6 @@ file(GLOB_RECURSE HEADERS "src/*.h")
 add_library(RobotSystem STATIC ${SOURCES} ${HEADERS})
 target_include_directories(RobotSystem PUBLIC src)
 
-find_library_header_files("${ARDUINO_CMAKE_PLATFORM_LIBRARIES_PATH}/Wire/src" wire_lib_headers)
-find_library_source_files("${ARDUINO_CMAKE_PLATFORM_LIBRARIES_PATH}/Wire/src" wire_lib_source_files)
-set(wire_lib_sources ${wire_lib_headers} ${wire_lib_source_files})
-target_include_directories(RobotSystem PUBLIC ${ARDUINO_CMAKE_PLATFORM_LIBRARIES_PATH}/Wire/src)
-
-# Example
-get_board_id(board_id mega atmega2560)
-
-add_arduino_executable(RobotExample ${board_id} examples/main.cpp examples/define.h)
-link_platform_library(RobotExample Wire ${board_id})
-link_arduino_library(RobotExample RobotSystem ${board_id})
+# Wire lib
+find_arduino_library(wire Wire)
+link_arduino_library(RobotSystem wire)
