--- a/.travis.yml
+++ b/.travis.yml
@@ -1,58 +1,54 @@
 language: cpp
-
 os:
-  - linux
-  - osx
-
+- linux
+- osx
 env:
   global:
-    - ARDUINO_SDK_BASE_PATH=arduino-sdk/arduino
+  - ARDUINO_SDK_BASE_PATH=arduino-sdk/arduino
   matrix:
-    - ARDUINO_SDK_VERSION=1.6.10
-    - ARDUINO_SDK_VERSION=1.8.8
-
+  - ARDUINO_SDK_VERSION=1.6.10
+  - ARDUINO_SDK_VERSION=1.8.8
 cache:
   directories:
-    - $HOME/$ARDUINO_SDK_BASE_PATH-$ARDUINO_SDK_VERSION
-
+  - "$HOME/$ARDUINO_SDK_BASE_PATH-$ARDUINO_SDK_VERSION"
 before_install:
-  - sdk_path="$HOME/$ARDUINO_SDK_BASE_PATH-$ARDUINO_SDK_VERSION"
-  - mkdir -p "$sdk_path"
-  - cd "$sdk_path/../.." # Get one level above 'arduino-sdk'
-  - |
-    if [[ -z "$(ls -A "$sdk_path")" ]];
-    then
-      if [[ $TRAVIS_OS_NAME == linux ]]; then
-        sdk_file="arduino-$ARDUINO_SDK_VERSION-linux64.tar.xz"
-      else
-        sdk_file="arduino-$ARDUINO_SDK_VERSION-macosx.zip"
-      fi
-      wget "https://downloads.arduino.cc/$sdk_file" -O "$sdk_file"
-      if [[ $TRAVIS_OS_NAME == linux ]]; then
-        tar -xf "$sdk_file" -C arduino-sdk
-      else
-        unzip -q "$sdk_file"
-        mv Arduino.app/* arduino-sdk/arduino-$ARDUINO_SDK_VERSION
-      fi
+- sdk_path="$HOME/$ARDUINO_SDK_BASE_PATH-$ARDUINO_SDK_VERSION"
+- mkdir -p "$sdk_path"
+- cd "$sdk_path/../.."
+- |
+  if [[ -z "$(ls -A "$sdk_path")" ]];
+  then
+    if [[ $TRAVIS_OS_NAME == linux ]]; then
+      sdk_file="arduino-$ARDUINO_SDK_VERSION-linux64.tar.xz"
+    else
+      sdk_file="arduino-$ARDUINO_SDK_VERSION-macosx.zip"
     fi
-  - |
-    if [[ $TRAVIS_OS_NAME == osx ]]; then
-      sdk_path="$sdk_path/Contents/Java"
+    wget "https://downloads.arduino.cc/$sdk_file" -O "$sdk_file"
+    if [[ $TRAVIS_OS_NAME == linux ]]; then
+      tar -xf "$sdk_file" -C arduino-sdk
+    else
+      unzip -q "$sdk_file"
+      mv Arduino.app/* arduino-sdk/arduino-$ARDUINO_SDK_VERSION
     fi
-  - export ARDUINO_SDK_PATH="$sdk_path"
-  - cd "$TRAVIS_BUILD_DIR"
-  - cd ..
-  - git clone https://github.com/arduino-cmake/Arduino-CMake-NG.git arduino-cmake-ng
-
+  fi
+- |
+  if [[ $TRAVIS_OS_NAME == osx ]]; then
+    sdk_path="$sdk_path/Contents/Java"
+  fi
+- export ARDUINO_SDK_PATH="$sdk_path"
+- cd "$TRAVIS_BUILD_DIR"
+- cd ..
+- git clone https://github.com/arduino-cmake/Arduino-CMake-NG.git arduino-cmake-ng
 install:
-  - cd "$TRAVIS_BUILD_DIR"
-  - mkdir build
-  - rm -rf build/*
-  - cd build/
-
+- cd "$TRAVIS_BUILD_DIR"
+- mkdir build
+- rm -rf build/*
+- cd build/
 script:
-  - cmake ..
-  - make
-
+- cmake ..
+- make
 after_failure:
-  - cat CMakeFiles/CMakeOutput.log
+- cat CMakeFiles/CMakeOutput.log
+notifications:
+  slack:
+    secure: feewT+Goa+RqfKz0AAmCQsKjkk5zY4rmRBe+Ao3aLy4WeDS8S/36tWoy44p/oJziCrF6ECCYuJI/T6x5Hfyu2bK9LP3oFTsBl1QU2JbT9PD4QXTAR/qxU1jk6syITSHSf84usg0P0IfrWdmLfR/pQgU+UsIl5slroyuACyyPXMY=
